--- a/Klorile tlhapi.html
+++ b/Klorile tlhapi.html
@@ -45,7 +45,7 @@ color:white;
 }
 
 </style>
-<title>Twelfhh - Save my soul (ft Juhda)</title>
+<title>Twelfhh - Klorile tlhapi</title>
 
 <a href="index.html"><h1><button class="bu">HOME</button></h1></a>
 <p>
